--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">AppStore</string>
+    <string name="app_download">下载</string>
+    <string name="app_mfg_http">下载</string>
+
 </resources>
