--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">AppStore</string>
     <string name="app_download">下载</string>
-    <string name="app_mfg_http">下载</string>
-    <string name="ip_address">http://192.168.0.83:8080/GooglePlayServer/</string>
+
+    <string name="app_mfg_http">192.168.0.83:8080/GooglePlayServer/home</string>
+
+
 </resources>
